--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Tororo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="bundle.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.170/build/three.module.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>-->
+    <script src="https://www.vantajs.com/dist/vanta.birds.min.js"></script>
 </head>
 
 <body style="background-color: #f3f4f6;"><!-- #f5f6f7 border:dashed 1px #CCC-->
