--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tororo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="bundle.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.170/build/three.module.min.js"></script>
+    <script type="text/javascript" src="js/three.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>-->
     <script src="https://www.vantajs.com/dist/vanta.birds.min.js"></script>
 </head>
