--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script type="text/javascript" src="js/three.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>-->
     <script src="https://www.vantajs.com/dist/vanta.birds.min.js"></script>
+    <style>
+        #body{
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+        }
+    </style>
 </head>
 
 <body id="body" style="background-color: #f3f4f6;"><!-- #f5f6f7 border:dashed 1px #CCC-->
