--- a/tools/fake-data.html
+++ b/tools/fake-data.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>虚拟数据生成器 - 在线工具箱</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* 针对本页面的特有样式 */
@@ -184,6 +184,6 @@
     <script src="fake-data.js"></script>
     
     <!-- 记得复用之前的背景动画 (可选) -->
-	<script src="../background.js"></script>
+	<script src="./assets/background.js"></script>
 </body>
 </html>
