--- a/tools/timestamp-converter.html
+++ b/tools/timestamp-converter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>时间戳转换器 - 在线工具箱</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* 针对本页面的特有样式 */
@@ -212,6 +212,6 @@
     <div id="toast" class="toast">已复制到剪贴板</div>
 
     <script src="timestamp-converter.js"></script>
-    <script src="../background.js"></script>
+    <script src="./assets/background.js"></script>
 </body>
 </html>
