--- a/tools/qr-generator.html
+++ b/tools/qr-generator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON 格式化与校验 - 在线工具箱</title>
+    <title>二维码生成器 - 在线工具箱</title>
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -13,12 +13,16 @@
             border-radius: 16px;
             padding: 40px;
             box-shadow: var(--card-shadow);
-            max-width: 1000px; /* 稍微宽一点 */
+            max-width: 800px;
             margin: 0 auto;
             animation: fadeInDown 0.5s ease-out;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .input-group {
+            width: 100%;
             margin-bottom: 25px;
             display: flex;
             flex-direction: column;
@@ -31,29 +35,63 @@
             font-size: 0.95rem;
         }
 
-        .input-group textarea {
+        .input-group textarea,
+        .input-group input[type="number"] {
             width: 100%;
-            min-height: 250px;
-            padding: 15px;
+            padding: 12px 15px;
             border: 1px solid #ddd;
             border-radius: 8px;
-            font-size: 0.95rem;
+            font-size: 1rem;
             transition: border-color 0.3s, box-shadow 0.3s;
             font-family: 'Courier New', Courier, monospace;
+        }
+        .input-group textarea {
+            min-height: 120px;
             resize: vertical;
         }
 
-        .input-group textarea:focus {
+        .input-group textarea:focus,
+        .input-group input[type="number"]:focus {
             border-color: var(--primary-color);
             box-shadow: 0 0 0 3px rgba(33, 150, 243, 0.2);
             outline: none;
+        }
+
+        .color-inputs {
+            display: flex;
+            gap: 20px;
+            margin-top: 10px;
+            margin-bottom: 25px;
+            width: 100%;
+            justify-content: center;
+        }
+
+        .color-input-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .color-input-item input[type="color"] {
+            width: 40px;
+            height: 40px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
+            padding: 0;
+        }
+        .color-input-item input[type="color"]::-webkit-color-swatch-wrapper {
+            padding: 0;
+        }
+        .color-input-item input[type="color"]::-webkit-color-swatch {
+            border: none;
         }
 
         .control-panel {
             display: flex;
             gap: 15px;
             margin-top: 30px;
-            margin-bottom: 25px;
+            margin-bottom: 30px;
             flex-wrap: wrap;
             justify-content: center;
         }
@@ -85,33 +123,23 @@
             background-color: #d5d5d5;
         }
 
-        .status-message {
-            margin-top: 20px;
-            padding: 15px;
+        #qr-canvas {
+            border: 1px solid #eee;
+            background-color: #f8f9fa; /* 防止透明背景 */
             border-radius: 8px;
-            font-size: 0.95rem;
-            display: none; /* 默认隐藏 */
-            align-items: center;
-            gap: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            margin-top: 20px;
+            max-width: 100%; /* 响应式 */
+            height: auto;
         }
 
-        .status-message.success {
-            background-color: #e8f5e9;
-            color: #28a745;
-            border: 1px solid #28a745;
-        }
-
-        .status-message.error {
-            background-color: #ffebee;
-            color: #dc3545;
-            border: 1px solid #dc3545;
-        }
-        .status-message.error pre {
-            white-space: pre-wrap;
-            word-break: break-all;
-            margin-top: 10px;
-            font-size: 0.85rem;
-            color: #dc3545;
+        .error-message {
+            color: #e74c3c;
+            font-size: 0.9rem;
+            margin-top: -15px;
+            margin-bottom: 15px;
+            min-height: 20px;
+            text-align: center;
         }
 
         /* 提示框 */
@@ -146,36 +174,46 @@
 
     <div class="container">
         <header>
-            <h1><i class="fa-solid fa-code"></i> JSON 格式化与校验</h1>
-            <p>美化、压缩 JSON 字符串并进行语法校验</p>
+            <h1><i class="fa-solid fa-qrcode"></i> 二维码生成器</h1>
+            <p>将任意内容转换为可自定义颜色的二维码</p>
         </header>
 
         <div class="tool-container">
             <div class="input-group">
-                <label for="jsonInput">JSON 输入:</label>
-                <textarea id="jsonInput" placeholder="在此处粘贴 JSON 字符串"></textarea>
+                <label for="qrContentInput">二维码内容:</label>
+                <textarea id="qrContentInput" placeholder="输入你想生成二维码的文本或网址"></textarea>
+                <div class="error-message" id="qrContentError"></div>
+            </div>
+
+            <div class="color-inputs">
+                <div class="color-input-item">
+                    <label for="fgColorInput">前景颜色:</label>
+                    <input type="color" id="fgColorInput" value="#000000">
+                </div>
+                <div class="color-input-item">
+                    <label for="bgColorInput">背景颜色:</label>
+                    <input type="color" id="bgColorInput" value="#ffffff">
+                </div>
+                <div class="color-input-item">
+                    <label for="qrSizeInput">尺寸 (px):</label>
+                    <input type="number" id="qrSizeInput" value="250" min="50" max="1000" step="50">
+                </div>
             </div>
 
             <div class="control-panel">
-                <button class="action-btn" onclick="formatJson()">
-                    <i class="fa-solid fa-indent"></i> 格式化
+                <button class="action-btn" onclick="generateQrCode()">
+                    <i class="fa-solid fa-qrcode"></i> 生成二维码
                 </button>
-                <button class="action-btn" onclick="compressJson()">
-                    <i class="fa-solid fa-compress"></i> 压缩
+                <button class="action-btn secondary" onclick="downloadQrCode()">
+                    <i class="fa-solid fa-download"></i> 下载 PNG
                 </button>
                 <button class="action-btn secondary" onclick="clearInput()">
                     <i class="fa-solid fa-eraser"></i> 清空
                 </button>
-                <button class="action-btn secondary" onclick="copyResult()">
-                    <i class="fa-regular fa-copy"></i> 复制结果
-                </button>
             </div>
 
-            <div id="statusMessage" class="status-message">
-                <i id="statusIcon" class="fa-solid"></i>
-                <span id="statusText"></span>
-                <pre id="errorDetails"></pre>
-            </div>
+            <canvas id="qr-canvas"></canvas>
+            
         </div>
 
         <footer>
@@ -183,9 +221,11 @@
         </footer>
     </div>
 
-    <div id="toast" class="toast">已复制到剪贴板</div>
+    <div id="toast" class="toast"></div>
 
-    <script src="json-formatter.js"></script>
-    <script src="./assets/background.js"></script>
+    <!-- 引入 qrious 库 -->
+    <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
+    <script src="qr-generator.js"></script>
+    <!-- <script src="./assets/background.js"></script> -->
 </body>
 </html>
