feat(fake-data): 添加社会统一信用代码生成功能

--- a/tools/fake-data.html
+++ b/tools/fake-data.html
@@ -170,6 +170,13 @@
                     <div class="data-value" id="val-bank">--</div>
                     <button class="copy-btn" onclick="copyText('val-bank')"><i class="fa-regular fa-copy"></i></button>
                 </div>
+
+                <!-- 社会统一信用代码 -->
+                <div class="data-item">
+                    <span class="data-label">社会统一信用代码 (Social unified credit code)</span>
+                    <div class="data-value" id="val-socialCode">--</div>
+                    <button class="copy-btn" onclick="copyText('val-socialCode')"><i class="fa-regular fa-copy"></i></button>
+                </div>
             </div>
         </div>
 
