fix(ui):将背景色从透明改为使用CSS变量--bg-color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<!-- 在 body 的最开始，<div class="container"> 之前添加： -->
 	<canvas id="bg-canvas"></canvas>
-    <div class="container">
+    <div class="container home">
         <header>
             <h1><i class="fa-solid fa-layer-group"></i> 在线工具箱</h1>
             <p>简单、高效、纯静态的常用工具集合</p>
