feat(homepage): 添加JWT Token解析工具和图片压缩工具卡片

--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@
 				<p>输入内容，自定义颜色和尺寸生成二维码；<br>上传二维码，解析内容</p>
 				<div class="arrow">→</div>
 			</a>
+
+			<!-- 示例卡片 6 -->
+			<a href="https://www.jwt.io" class="card" target="_blank" rel="noopener noreferrer">
+				<div class="icon-box" style="background: #e3f2fd; color: #2196f3;">
+					<i class="fa-regular fa-chess-rook"></i>
+				</div>
+				<h3>JWT Token解析工具</h3>
+				<p>用于解析JWT Token中的数据、验证token是否有效</p>
+				<div class="arrow">→</div>
+			</a>
+
+			<!-- 示例卡片 7 -->
+			<a href="https://tinypng.com" class="card" target="_blank" rel="noopener noreferrer">
+				<div class="icon-box" style="background: #e3f2fd; color: #2196f3;">
+					<i class="fa-solid fa-images"></i>
+				</div>
+				<h3>图片压缩工具</h3>
+				<p>可用于压缩图片、批量压缩图片</p>
+				<div class="arrow">→</div>
+			</a>
 			
 			<!-- 示例卡片 4 -->
 			<a href="https://www.xiaolvfang.com" class="card" target="_blank" rel="noopener noreferrer">
