--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1><i class="fa-solid fa-layer-group"></i> 在线工具箱</h1>
 			<!-- 显示访问次数的地方 -->
             <p>简单、高效、纯静态的常用工具集合</p>
-			<p>全网累计访问 <span id="page_pv">加载中...</span> 次</p>
-			<div style="display: none;"><img src="https://visitor-badge.laobi.icu/badge?page_id=xiaochen22833.github.io"></div>
+			<p style="display: none;">全网累计访问 <span id="page_pv">加载中...</span> 次</p>
+			<p style="display: flex;justify-content: center;gap: 5px;">全网累计访问 <img src="https://visitor-badge.laobi.icu/badge?page_id=xiaochen22833.github.io"></p>
 		</header>
 
         <main class="grid-container" id="tools-grid">
