feat(background): 添加动态favicon替换功能

--- a/tools/qr-generator.html
+++ b/tools/qr-generator.html
@@ -226,6 +226,6 @@
     <!-- 引入 qrious 库 -->
     <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
     <script src="qr-generator.js"></script>
-    <!-- <script src="./assets/background.js"></script> -->
+    <script src="./assets/background.js"></script>
 </body>
 </html>
