--- a/tools/qr-tool.html
+++ b/tools/qr-tool.html
@@ -176,5 +176,6 @@
 <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
 <script src="./qr-tool.js"></script>
+<script src="./assets/background.js"></script>
 </body>
 </html>
