feat(background): 添加动态favicon替换功能

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<i class="fa-solid fa-id-card"></i>
 				</div>
 				<h3>虚拟数据生成</h3>
-				<p>随机生成中文姓名、手机号、身份证和银行卡号</p>
+				<p>随机生成中文姓名、手机号、身份证、银行卡号、社会统一信用代码等</p>
 				<div class="arrow">→</div>
 			</a>
 
