feat(timestamp):重构时间戳转换器界面并增强功能

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<!-- 显示访问次数的地方 -->
             <p>简单、高效、纯静态的常用工具集合</p>
 			<p style="display: none;">全网累计访问 <span id="page_pv">加载中...</span> 次</p>
-			<p style="display: flex;justify-content: center;gap: 5px;">全网累计访问 <img src="https://visitor-badge.laobi.icu/badge?page_id=xiaochen22833.github.io"></p>
+			<p style="display: flex;justify-content: center;gap: 5px;">全网累计访问 <img src="https://visitor-badge.laobi.icu/badge?page_id=xiaochen22833.github.io" alt=""></p>
 		</header>
 
         <main class="grid-container" id="tools-grid">
